--- a/docs/package.json
+++ b/docs/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
     "dev": "next",
-    "build": "next build",
-    "postbuild": "pnpm run postbuild:sitemap && pnpm run postbuild:cleanup && pnpm run postbuild:llms-txt",
+    "build": "next build && pnpm run postbuild",
+    "postbuild": "pnpm run postbuild:sitemap && pnpm run postbuild:cleanup && pnpm run postbuild:llms-txtpnpm run postbuild:sitemap && pnpm run postbuild:cleanup && pnpm run postbuild:llms-txtpnpm run postbuild:sitemap && pnpm run postbuild:cleanup && pnpm run postbuild:llms-txtpnpm run postbuild:sitemap && pnpm run postbuild:cleanup && pnpm run postbuild:llms-txt",
     "start": "next start",
     "postbuild:sitemap": "next-sitemap",
     "postbuild:cleanup": "echo 'Removing .next/cache to resolve Nextra caching bug' && rm -rf .next/cache",
