--- a/litellm.env
+++ b/litellm.env
@@ -1,4 +1,4 @@
-# used by litellm
+# NOT USED (used by litellm)
 LANGFUSE_PUBLIC_KEY="pk-lf-ossllmopsstack"
 LANGFUSE_SECRET_KEY="sk-lf-ossllmopsstack"
 LANGFUSE_HOST="http://langfuse-web:3000"
