--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,8 +50,9 @@ services:
       - "3000"
     environment:
       <<: *langfuse-worker-env
-      NEXTAUTH_URL: "${COOLIFY_FQDN_0}"
+      NEXTAUTH_URL: "${LANGFUSE_PUBLIC_URL}"
       NEXTAUTH_SECRET: "${NEXTAUTH_SECRET}"
+      - SERVICE_FQDN_3000
       LANGFUSE_INIT_ORG_ID: "${LANGFUSE_ORG_ID:-default-org}"
       LANGFUSE_INIT_ORG_NAME: "${LANGFUSE_ORG_NAME:-My Organization}"
       LANGFUSE_INIT_PROJECT_ID: "${LANGFUSE_PROJECT_ID:-default-project}"
@@ -138,8 +139,7 @@ services:
       LANGFUSE_SECRET_KEY: "${LANGFUSE_SECRET_KEY}"
       LANGFUSE_HOST: "http://langfuse-web:3000"
       OPENAI_API_KEY: "${OPENAI_API_KEY}"
-      GOOGLE_API_KEY: "${GOOGLE_API_KEY}"
-      LITELLM_MASTER_KEY: "${LITELLM_MASTER_KEY}"
+      - SERVICE_FQDN_4000
     depends_on:
       litellm-db:
         condition: service_healthy
