--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
       <<: *langfuse-worker-env
       NEXTAUTH_URL: "${LANGFUSE_PUBLIC_URL}"
       NEXTAUTH_SECRET: "${NEXTAUTH_SECRET}"
-      - SERVICE_FQDN_3000
+      - SERVICE_FQDN_LANGFUSE_WEB_3000
       LANGFUSE_INIT_ORG_ID: "${LANGFUSE_ORG_ID:-default-org}"
       LANGFUSE_INIT_ORG_NAME: "${LANGFUSE_ORG_NAME:-My Organization}"
       LANGFUSE_INIT_PROJECT_ID: "${LANGFUSE_PROJECT_ID:-default-project}"
@@ -139,7 +139,7 @@ services:
       LANGFUSE_SECRET_KEY: "${LANGFUSE_SECRET_KEY}"
       LANGFUSE_HOST: "http://langfuse-web:3000"
       OPENAI_API_KEY: "${OPENAI_API_KEY}"
-      - SERVICE_FQDN_4000
+      - SERVICE_FQDN_LITELLM_4000
     depends_on:
       litellm-db:
         condition: service_healthy
