--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,27 +19,27 @@ services:
       ENCRYPTION_KEY: "${LANGFUSE_ENCRYPTION_KEY}"
       TELEMETRY_ENABLED: ${TELEMETRY_ENABLED:-true}
       LANGFUSE_ENABLE_EXPERIMENTAL_FEATURES: ${LANGFUSE_ENABLE_EXPERIMENTAL_FEATURES:-true}
-      CLICKHOUSE_MIGRATION_URL: ${CLICKHOUSE_MIGRATION_URL:-clickhouse://clickhouse:9000}
-      CLICKHOUSE_URL: ${CLICKHOUSE_URL:-http://clickhouse:8123}
-      CLICKHOUSE_USER: ${CLICKHOUSE_USER:-clickhouse}
+      CLICKHOUSE_MIGRATION_URL: clickhouse://clickhouse:9000
+      CLICKHOUSE_URL: http://clickhouse:8123
+      CLICKHOUSE_USER: clickhouse
       CLICKHOUSE_PASSWORD: ${CLICKHOUSE_PASSWORD:-clickhouse}
-      CLICKHOUSE_CLUSTER_ENABLED: ${CLICKHOUSE_CLUSTER_ENABLED:-false}
-      LANGFUSE_S3_EVENT_UPLOAD_BUCKET: ${LANGFUSE_S3_EVENT_UPLOAD_BUCKET:-langfuse}
-      LANGFUSE_S3_EVENT_UPLOAD_REGION: ${LANGFUSE_S3_EVENT_UPLOAD_REGION:-us-east-1}
+      CLICKHOUSE_CLUSTER_ENABLED: "false"
+      LANGFUSE_S3_EVENT_UPLOAD_BUCKET: langfuse
+      LANGFUSE_S3_EVENT_UPLOAD_REGION: us-east-1
       LANGFUSE_S3_EVENT_UPLOAD_ACCESS_KEY_ID: "${MINIO_ROOT_USER:-minio}"
       LANGFUSE_S3_EVENT_UPLOAD_SECRET_ACCESS_KEY: "${MINIO_ROOT_PASSWORD:-miniosecret}"
       LANGFUSE_S3_EVENT_UPLOAD_ENDPOINT: "http://minio:9000"
       LANGFUSE_S3_EVENT_UPLOAD_FORCE_PATH_STYLE: "true"
-      LANGFUSE_S3_EVENT_UPLOAD_PREFIX: ${LANGFUSE_S3_EVENT_UPLOAD_PREFIX:-events/}
-      LANGFUSE_S3_MEDIA_UPLOAD_BUCKET: ${LANGFUSE_S3_MEDIA_UPLOAD_BUCKET:-langfuse}
-      LANGFUSE_S3_MEDIA_UPLOAD_REGION: ${LANGFUSE_S3_MEDIA_UPLOAD_REGION:-us-east-1}
+      LANGFUSE_S3_EVENT_UPLOAD_PREFIX: events/
+      LANGFUSE_S3_MEDIA_UPLOAD_BUCKET: langfuse
+      LANGFUSE_S3_MEDIA_UPLOAD_REGION: us-east-1
       LANGFUSE_S3_MEDIA_UPLOAD_ACCESS_KEY_ID: "${MINIO_ROOT_USER:-minio}"
       LANGFUSE_S3_MEDIA_UPLOAD_SECRET_ACCESS_KEY: "${MINIO_ROOT_PASSWORD:-miniosecret}"
       LANGFUSE_S3_MEDIA_UPLOAD_ENDPOINT: "http://minio:9000"
       LANGFUSE_S3_MEDIA_UPLOAD_FORCE_PATH_STYLE: "true"
-      LANGFUSE_S3_MEDIA_UPLOAD_PREFIX: ${LANGFUSE_S3_MEDIA_UPLOAD_PREFIX:-media/}
-      REDIS_HOST: ${REDIS_HOST:-redis}
-      REDIS_PORT: ${REDIS_PORT:-6379}
+      LANGFUSE_S3_MEDIA_UPLOAD_PREFIX: media/
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
       REDIS_AUTH: "${REDIS_PASSWORD}"
 
   langfuse-web:
@@ -52,7 +52,7 @@ services:
       <<: *langfuse-worker-env
       NEXTAUTH_URL: "${LANGFUSE_PUBLIC_URL}"
       NEXTAUTH_SECRET: "${NEXTAUTH_SECRET}"
-      - SERVICE_FQDN_LANGFUSE_WEB_3000
+      SERVICE_FQDN_LANGFUSE_WEB_3000: ""
       LANGFUSE_INIT_ORG_ID: "${LANGFUSE_ORG_ID:-default-org}"
       LANGFUSE_INIT_ORG_NAME: "${LANGFUSE_ORG_NAME:-My Organization}"
       LANGFUSE_INIT_PROJECT_ID: "${LANGFUSE_PROJECT_ID:-default-project}"
@@ -101,10 +101,9 @@ services:
   redis:
     image: redis:7
     restart: always
-    command: >
-      --requirepass "${REDIS_PASSWORD}"
+    command: --requirepass "${REDIS_PASSWORD:-myredissecret}"
     healthcheck:
-      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD:-myredissecret}", "ping"]
       interval: 3s
       timeout: 10s
       retries: 10
@@ -139,7 +138,7 @@ services:
       LANGFUSE_SECRET_KEY: "${LANGFUSE_SECRET_KEY}"
       LANGFUSE_HOST: "http://langfuse-web:3000"
       OPENAI_API_KEY: "${OPENAI_API_KEY}"
-      - SERVICE_FQDN_LITELLM_4000
+      SERVICE_FQDN_LITELLM_4000: ""
     depends_on:
       litellm-db:
         condition: service_healthy
