back to ugly format that works

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
         condition: service_healthy
     environment:
       - DATABASE_URL=postgresql://postgres:${SERVICE_PASSWORD_POSTGRES}@postgres:5432/postgres
-      - SALT=${SERVICE_BASE64_64_LANGFUSE-SALT}
-      - ENCRYPTION_KEY=${SERVICE_BASE64_64_LANGFUSE-ENCRYPTION-KEY}
+      - SALT=${SERVICE_BASE64_64_LANGFUSESALT}
+      - ENCRYPTION_KEY=${SERVICE_BASE64_64_LANGFUSEENCRYPTIONKEY}
       - TELEMETRY_ENABLED=${TELEMETRY_ENABLED:-true}
       - LANGFUSE_ENABLE_EXPERIMENTAL_FEATURES=${LANGFUSE_ENABLE_EXPERIMENTAL_FEATURES:-true}
       - CLICKHOUSE_MIGRATION_URL=clickhouse://clickhouse:9000
@@ -58,8 +58,8 @@ services:
       - "3000"
     environment:
       - DATABASE_URL=postgresql://postgres:${SERVICE_PASSWORD_POSTGRES}@postgres:5432/postgres
-      - SALT=${SERVICE_BASE64_64_LANGFUSE-SALT}
-      - ENCRYPTION_KEY=${SERVICE_BASE64_64_LANGFUSE-ENCRYPTION-KEY}
+      - SALT=${SERVICE_BASE64_64_LANGFUSESALT}
+      - ENCRYPTION_KEY=${SERVICE_BASE64_64_LANGFUSEENCRYPTIONKEY}
       - TELEMETRY_ENABLED=${TELEMETRY_ENABLED:-true}
       - LANGFUSE_ENABLE_EXPERIMENTAL_FEATURES=${LANGFUSE_ENABLE_EXPERIMENTAL_FEATURES:-true}
       - CLICKHOUSE_MIGRATION_URL=clickhouse://clickhouse:9000
@@ -85,19 +85,19 @@ services:
       - REDIS_PORT=6379
       - REDIS_AUTH=${SERVICE_PASSWORD_REDIS}
       - NEXTAUTH_URL=${SERVICE_URL_LANGFUSE-WEB_3000}
-      - NEXTAUTH_SECRET=${SERVICE_BASE64_64_NEXTAUTH-SECRET}
+      - NEXTAUTH_SECRET=${SERVICE_BASE64_64_NEXTAUTHSECRET}
       - LANGFUSE_INIT_ORG_ID=${LANGFUSE_ORG_ID:-default-org}
       - LANGFUSE_INIT_ORG_NAME=${LANGFUSE_ORG_NAME:-My Organization}
       - LANGFUSE_INIT_PROJECT_ID=${LANGFUSE_PROJECT_ID:-default-project}
       - LANGFUSE_INIT_PROJECT_NAME=${LANGFUSE_PROJECT_NAME:-My Project}
-      - LANGFUSE_INIT_PROJECT_PUBLIC_KEY=${SERVICE_BASE64_64_LANGFUSE-PROJECT-PK}
-      - LANGFUSE_INIT_PROJECT_SECRET_KEY=${SERVICE_BASE64_64_LANGFUSE-PROJECT-SK}
+      - LANGFUSE_INIT_PROJECT_PUBLIC_KEY=${SERVICE_BASE64_64_LANGFUSEPROJECTPK}
+      - LANGFUSE_INIT_PROJECT_SECRET_KEY=${SERVICE_BASE64_64_LANGFUSEPROJECTSK}
       - LANGFUSE_INIT_USER_EMAIL=${LANGFUSE_ADMIN_EMAIL:-admin@example.com}
       - LANGFUSE_INIT_USER_NAME=${LANGFUSE_ADMIN_NAME:-Admin User}
       - LANGFUSE_INIT_USER_PASSWORD=${LANGFUSE_ADMIN_PASSWORD}
 
   clickhouse:
-    image: clickhouse/clickhouse-server:latest
+    image: clickhouse/clickhouse-server
     restart: always
     user: "101:101"
     environment:
@@ -115,7 +115,7 @@ services:
       start_period: 1s
 
   minio:
-    image: minio/minio:latest
+    image: minio/minio
     restart: always
     entrypoint: sh
     command: -c 'mkdir -p /data/langfuse && minio server --address ":9000" --console-address ":9001" /data'
@@ -171,8 +171,8 @@ services:
     environment:
       - DATABASE_URL=postgresql://postgres:${SERVICE_PASSWORD_LITELLM-DB}@litellm-db:5432/postgres
       - STORE_MODEL_IN_DB=True
-      - LANGFUSE_PUBLIC_KEY=${SERVICE_BASE64_64_LANGFUSE-PROJECT-PK}
-      - LANGFUSE_SECRET_KEY=${SERVICE_BASE64_64_LANGFUSE-PROJECT-SK}
+      - LANGFUSE_PUBLIC_KEY=${SERVICE_BASE64_64_LANGFUSEPROJECTPK}
+      - LANGFUSE_SECRET_KEY=${SERVICE_BASE64_64_LANGFUSEPROJECTSK}
       - LANGFUSE_HOST=http://langfuse-web:3000
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
