--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
         condition: service_healthy
     ports:
       - "3000"
+    exclude_from_hc: true
     environment:
       - DATABASE_URL=postgresql://postgres:${SERVICE_PASSWORD_POSTGRES}@postgres:5432/postgres
       - SALT=${SERVICE_BASE64_64_LANGFUSESALT}
