--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,12 @@ services:
       - LANGFUSE_INIT_USER_EMAIL=${LANGFUSE_ADMIN_EMAIL:-admin@example.com}
       - LANGFUSE_INIT_USER_NAME=${LANGFUSE_ADMIN_NAME:-Admin User}
       - LANGFUSE_INIT_USER_PASSWORD=${LANGFUSE_ADMIN_PASSWORD}
+    healthcheck:
+        test: ["CMD-SHELL", "wget -q --spider --tries=1 --timeout=5 http://localhost:3000/ || exit 1"]
+        interval: 10s
+        timeout: 5s
+        retries: 5
+        start_period: 10s
 
   clickhouse:
     image: clickhouse/clickhouse-server
