--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,7 +109,7 @@ services:
       - langfuse_clickhouse_data:/var/lib/clickhouse
       - langfuse_clickhouse_logs:/var/log/clickhouse-server
     healthcheck:
-      test: ["CMD-SHELL", "wget -q --spider --tries=1 --timeout=5 http://localhost:8123/ping || exit 1"]
+      test: wget --no-verbose --tries=1 --spider http://localhost:8123/ping || exit 1
       interval: 5s
       timeout: 5s
       retries: 10
@@ -180,8 +180,6 @@ services:
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
     depends_on:
       litellm-db:
-        condition: service_healthy
-      langfuse-web:
         condition: service_healthy
 
   litellm-db:
