Added Openrouter API Key, LLM Caching

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -182,6 +182,7 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
     depends_on:
       litellm-db:
         condition: service_healthy
