--- a/litellm-config.yaml
+++ b/litellm-config.yaml
@@ -6,3 +6,5 @@ litellm_settings:
 
 general_settings:
   master_key: os.environ/LITELLM_MASTER_KEY
+  store_model_in_db: True
+  store_prompts_in_spend_logs: True
