--- a/litellm-config.yaml
+++ b/litellm-config.yaml
@@ -1,5 +1,6 @@
 general_settings:
   store_model_in_db: true
+  store_prompts_in_spend_logs: true
   infer_model_from_keys: false
   master_key: os.environ/LITELLM_MASTER_KEY
 
