--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,7 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - REDIS_AUTH=${SERVICE_PASSWORD_REDIS}
-      - NEXTAUTH_URL=${SERVICE_FQDN_LANGFUSEWEB}
+      - NEXTAUTH_URL=${SERVICE_URL_LANGFUSEWEB}
       - NEXTAUTH_SECRET=${SERVICE_BASE64_64_NEXTAUTHSECRET}
       - LANGFUSE_INIT_ORG_ID=${LANGFUSE_ORG_ID:-default-org}
       - LANGFUSE_INIT_ORG_NAME=${LANGFUSE_ORG_NAME:-My Organization}
