--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -200,8 +200,18 @@ services:
       retries: 10
 
 volumes:
-  langfuse_postgres_data: {}
-  langfuse_clickhouse_data: {}
-  langfuse_clickhouse_logs: {}
-  langfuse_minio_data: {}
-  litellm-db-data: {}
+  langfuse_postgres_data:
+    external: true
+    name: langfuse-postgres-data
+  langfuse_clickhouse_data:
+    external: true
+    name: langfuse-clickhouse-data
+  langfuse_clickhouse_logs:
+    external: true
+    name: langfuse-clickhouse-logs
+  langfuse_minio_data:
+    external: true
+    name: langfuse-minio-data
+  litellm-db-data:
+    external: true
+    name: litellm-db-data
